# LiTensor

./: .clangd  CMakeLists.txt  README.md  flake.nix
include/featherlight/core/: Definitions.hpp  Tensor.hpp  TensorView.hpp
src/utils/: DataNormalization.hpp  Utils.hpp
tests/: CMakeLists.txt  CoreTests.cpp
